# playground

./: README.md
algo/binary_search/src/: main.rs
aoc/2024/01/src/: main.rs
aoc/2024/02/src/: main.rs
cassidoo/2024/week_44/src/: main.rs
cassidoo/2024/week_45/: Cargo.toml
cassidoo/2024/week_46/: Cargo.toml
cassidoo/2025/week_32/: Cargo.toml
cassidoo/2025/week_32/src/: main.rs
cassidoo/2025/week_37/: Cargo.toml
cassidoo/2025/week_37/src/: main.rs
cassidoo/2025/week_38/: Cargo.toml
cassidoo/2025/week_38/src/: main.rs
cassidoo/2025/week_39/: Cargo.toml
cassidoo/2025/week_39/src/: main.rs
cassidoo/week_40/: Cargo.toml
cassidoo/week_40/src/: main.rs
cassidoo/week_44/: Cargo.toml  README.md
cassidoo/week_44/src/: main.rs
cassidoo/week_45/src/: main.rs
cassidoo/week_46/src/: main.rs
cassidoo/week_47/: Cargo.toml  README.md
cassidoo/week_47/src/: main.rs
cassidoo/week_48/: Cargo.toml  README.md
cassidoo/week_48/src/: main.rs
nutypes/: Cargo.toml  README.md
nutypes/src/: client.rs  lib.rs  main.rs  models.rs  server.rs
nutypes/src/commands/: client.rs  server.rs
nutypes/src/server/: handlers.rs
shabe/: Cargo.toml  README.md
shabe/shabe/: Cargo.toml
shaberu/: Cargo.toml  README.md
shaberu/shaberu/: Cargo.toml
shaberu/shaberu/examples/api-client/: main.rs
shaberu/shaberu/src/: main.rs  models.rs
shaberu/shaberu/src/api/: client.rs
shaberu/shaberu/src/commands/: server.rs
tauri/tauri-app/src/: app.rs
tauri/tauri-app/src-tauri/src/: main.rs
yew/yew-app/: Cargo.toml  index.html
yew/yew-app/src/: main.rs
