[package]
name = "nutypes"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
axum = "0.7.7"
bytes = "1.7.2"
clap = { version = "4.5.20", features = ["derive", "env"] }
derive_more = { version = "1.0.0", features = ["display"] }
http = "1.1.0"
reqwest = "0.12.8"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
thiserror = "1.0.64"
tokio = { version = "1.40.0", features = ["full"] }
tracing = "0.1.40"
url = "2.5.2"
uuid = { version = "1.10.0", features = ["serde", "v7"] }
