[package]
name = "shaberu"
version = "0.1.0"
edition = "2021"

[lib]

[[bin]]
name = "shabe"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.95"
axum = { version = "0.8.1", features = ["http2", "ws"] }
clap = { version = "4.5", features = ["derive", "env"] }
hex = { version = "0.4.3", features = ["serde"] }
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["macros", "rt", "rt-multi-thread"] }
tracing = "0.1.41"
